k8s/arr/gluetun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: gluetun
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: gluetun
